<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:background="@android:color/white"
    tools:context="activities.ActivityNivel3">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="@dimen/_10sdp"
        android:layout_marginRight="@dimen/_10sdp"
        android:layout_marginTop="@dimen/_10sdp"
        android:layout_marginBottom="@dimen/_10sdp"
        android:background="@android:color/white"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tv_nombre"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_25sdp"
            android:text="@string/jugador_nombre"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="18.00dp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/textView_score"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_25sdp"
            android:text="@string/puntaje"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="18.00dp"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView_vidas"
                android:layout_width="wrap_content"
                android:layout_height="@dimen/_25sdp"
                android:layout_weight="0"
                android:text="@string/vidas"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="18.00dp"
                android:textStyle="bold" />

            <ImageView
                android:id="@+id/imageView_vidas"
                android:layout_width="@dimen/_60sdp"
                android:layout_height="@dimen/_25sdp"
                app:srcCompat="@drawable/tresvidas"
                android:contentDescription="TODO" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/_100sdp"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/imageView_primervalor"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                app:srcCompat="@drawable/cero"
                android:contentDescription="TODO" />

            <ImageView
                android:id="@+id/imageView_signo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                app:srcCompat="@drawable/resta" />

            <ImageView
                android:id="@+id/imageView_segundovalor"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                app:srcCompat="@drawable/cero"
                android:contentDescription="TODO" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="2">

            <EditText
                android:id="@+id/editText_respuesta"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:layout_weight="1"
                android:hint="@string/respuesta"
                android:inputType="number" />

            <Button
                android:id="@+id/button"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@color/colorAccent"
                android:onClick="Comparar"
                android:text="@string/comprobar"
                android:textColor="@android:color/background_light" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="4">

            <View
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_weight="2" />

            <Button
                android:id="@+id/button3"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="#B39BA4"
                android:onClick="Pista"
                android:text="@string/ayuda"
                android:textColor="@android:color/background_light"
                android:textSize="12.00dp" />

            <TextView
                android:id="@+id/tv_respuesta"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/respuesta_edit"
                android:textColor="#636061"
                android:textSize="16.00dp"
                android:textStyle="bold" />
        </LinearLayout>

    </LinearLayout>

</RelativeLayout>

